--- a/blog/templates/blog/blog_article.html
+++ b/blog/templates/blog/blog_article.html
@@ -3,54 +3,56 @@
 {% load thumbnail %}
 
 {% block application %}
-    <div class="row bg-white shadow-sm">
-        <h2 class="my-3">{{ article.title }}</h2><br>
-        <div class="ps-4">
-            {% thumbnail article.preview "1270" as im %}
-                <img src="{{ im.url }}" alt="{{ article.title }}" class="img-fluid shadow-lg">
-            {% endthumbnail %}
-        </div>
-        <div class="p-3">
-            <div class="ps-2 fs-4 text-break">
+    <div class="article-wrapper">
+        <div class="article-content">
+            <h2>{{ article.title }}</h2>
+
+            <div class="article-img">
+                {% thumbnail article.preview "1000" as im %}
+                    <img src="{{ im.url }}" alt="{{ article.title }}">
+                {% endthumbnail %}
+            </div>
+
+            <div class="article-text">
                 {{ article.full_text|safe }}
             </div>
-            <p class="small float-end pt-4">
+            <p class="article-time">
                 {{ article.creation_date }}
             </p>
         </div>
     </div>
-    <div class="row bg-white shadow-sm mt-3 py-2 rounded-2">
-        <h4>Комментарии</h4>
+
+
+    <div class="comments-send-wrapper">
+        <h3>Оставить комментарий</h3>
         <form method="post">
             {% csrf_token %}
-            <div class="mb-3">
-                <label for="author_name" class="form-label">Имя</label>
-                <input type="text" class="form-control" id="author_name" name="author_name"
-                       aria-describedby="emailHelp">
-            </div>
-            <div class="mb-3">
-                <label for="text" class="form-label">Комментарий</label>
-                <textarea class="form-control" id="text" rows="3" name="text"></textarea>
-                {{ form.article }}
-            </div>
-            <button type="submit" class="btn btn-primary">Отправить</button>
+
+            <label for="auth_name">Имя</label>
+            <input type="text" class="comments-send-author" id="auth_name" name="author_name" ,
+                   placeholder="Введите имя">
+
+            <label for="text" class="form-label">Комментарий</label>
+            <textarea class="form-control" id="text" rows="3" name="text"></textarea>
+            {{ form.article }}
+            <button type="submit" class="comments-send-button">Отправить</button>
         </form>
 
 
     </div>
     {% verbatim %}
     <div id="comments_app">
-        <div class="d-flex flex-start mt-3" v-for="comment in comments">
-            <img class="rounded-circle shadow-1-strong me-3"
+        <div class="comments-wrapper" v-for="comment in comments">
+            <img class="comments-avatar"
                  src="/media/blog/imgs/avatpic.jpg" alt="avatar"
                  width="65"
                  height="65"/>
-            <div class="card container-fluid">
-                <div class="card-body p-4">
-                    <div class="">
-                        <h5>{{ comment.author_name }}</h5>
+            <div class="comments-content">
+                <div>
+                    <div>
+                        <h3>{{ comment.author_name }}</h3>
                         <p class="small">{{ comment.date | formatDate }}</p>
-                        <p>
+                        <p class="comments-text">
                             {{ comment.text }}
                         </p>
                     </div>
