--- a/static/css/style.css
+++ b/static/css/style.css
@@ -280,7 +280,7 @@ a.button-read:focus {
 
 .shadow {
     background: #f0f0f0; /* Цвет фона */
-    box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Параметры тени */
     padding: 10px;
 }
 
