--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
     <link rel="shortcut icon" type="/static/image/png" href="static/images/favicon.ico"/>
     <link rel="stylesheet" href="/static/css/reset.css"/>
     <link rel="stylesheet" href="/static/css/defaults.css?v2"/>
-    <link rel="stylesheet" href="/static/css/style.css?v3"/>
-    <link rel="stylesheet" href="/static/css/article.css?v2"/>
+    <link rel="stylesheet" href="/static/css/style.css?v7"/>
+    <link rel="stylesheet" href="/static/css/article.css?v3"/>
     <link rel="stylesheet" href="/static/css/aboutme.css?v1">
-    <link rel="stylesheet" href="/static/css/foodgen.css?v1">
+    <link rel="stylesheet" href="/static/css/foodgen.css?v2">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,7 +64,7 @@
                     <li>
                         <a class="nav-link active" aria-current="page" href="{% url 'aboutmepage' %}">Обо мне</a>
                     </li>
-                    <li>
+                    <li class="admin-panel">
                         <a class="nav-link active" aria-current="page" target="_blank" href="/admin">Админка</a>
                     </li>
                     <li>
