--- a/static/css/foodgen.css
+++ b/static/css/foodgen.css
@@ -5,8 +5,8 @@
     background-size: cover;
     padding: 15px 15px 150px 15px;
     box-sizing: border-box;
+    min-width: 1055px;
 }
-
 
 
 .foodgen-start-button button {
@@ -77,15 +77,17 @@
     margin-bottom: 15px;
     border-radius: 5px;
 }
+
 .foodgen-wrapper-food div img:nth-child(2) {
     margin-left: 14px;
 }
+
 .foodgen-wrapper-food div img:hover {
     outline: 1px solid dodgerblue;
 }
 
 .foodgen-wrapper-food {
-  margin-bottom: 50px;
+    margin-bottom: 50px;
 }
 
 .foodgen-wrapper-food div {
@@ -93,7 +95,7 @@
 }
 
 .foodgen-wrapper-food div h3 {
-    background-color: rgba(255,255,255, 0.7);
+    background-color: rgba(255, 255, 255, 0.7);
     margin-bottom: 15px;
     color: #000;
     padding: 4px;
